some text placeholders changed
some text placeholders changed for better presentaion

--- a/index.html
+++ b/index.html
@@ -22,46 +22,44 @@
                 </div>
                 <div class="card_container">
                     <div class="item active" data-id="1">
-                        <h1>Someone 1</h1>
+                        <h1>Slide Title 1</h1>
                         <hr>
                         <div class="row">
                             <div class="left">
                                 <img src="https://loremflickr.com/g/150/150/flower" alt="">
                             </div>
                             <div class="right">
-                                    asdsa sd sad sads adsa dsa dsa dsa sa dsad as dsaasdsa sd sad sads adsa dsa dsa dsa sa dsad as dsaasdsa sd sad sads adsa dsa dsa dsa sa dsad as dsaasdsa sd sad sads adsa dsa dsa dsa sa dsad as dsaasdsa sd sad sads adsa dsa dsa dsa sa dsad as dsa
+                                    Lorem ipsum dolor sit amet, euismod insolens reformidans id vel, pri ad vivendo delicatissimi, volumus dissentias nec at. Mea eu postulant expetenda definiebas. Per no postulant philosophia, sit eros mnesarchum consetetur ad. Pro ex eligendi corrumpit, vis et esse feugait. Purto fastidii vix id, quo omnes assentior et, ea mei omnium audiam interpretaris.
                             </div>
                         </div>
                     </div>
 
                     <div class="item" data-id="2">
-                            <h1>Saeed Sheikholeslami</h1>
+                            <h1>Slide Title 2</h1>
                             <hr>
                             <div class="row">
                                 <div class="left">
                                     <img src="https://loremflickr.com/g/150/150/dog" alt="">
                                 </div>
                                 <div class="right">
-                                    I am Saeed Sheikholeslami, I am studying master of science Computer in AI and Roboticts, I am a software engineer and i am making softwares for about 8 years, I love to learn... i mean really i love to learn new things. i love books ( a lot ). Life is a magic and it's so so much wonderful.. Have fun!
+                                    No nam affert quaestio reprehendunt, eu agam aperiri qui. Eam mentitum voluptaria an. Sumo purto disputando has te, mei alia laudem dissentiunt no. Vis no saperet laoreet adipisci.
                                 </div>
                             </div>
                         </div>
 
                         <div class="item" data-id="3">
-                                <h1>Farid Pour Tahmasebi</h1>
+                                <h1>Slide Title 3</h1>
                                 <hr>
                                 <div class="row">
                                     <div class="left">
                                         <img src="https://loremflickr.com/g/150/150/sea" alt="">
                                     </div>
                                     <div class="right">
-                                        I am farid Pour Tahmasi, Bachleor of science in computer engineering. I am learning backend programming with php. at the momemnt i am learning oop in php and in sametime i am learning jQuery. i hope i find and make my place in software world as backend programmer.
+                                        Eu duo soleat atomorum. No odio numquam vis, ne mea fuisset signiferumque vituperatoribus. Usu deserunt tincidunt complectitur no. Antiopam vulputate qui ei, pro eu nonumy definiebas. No sed facilis indoctum, per ex cetero nostrum. Est munere recteque ne, mei illum suavitate te, ius verear timeam electram ex.
                                     </div>
                                 </div>
                             </div>
-
-                            
-
+                    
                             <div class="count_slider">
                                 Profile <span class="current_slide">1</span> of <span class="total_slides">X</span>
                             </div>
